# django-belt

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  Pipfile  README.rst  gulpfile.babel.js  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini
.github/workflows/: workflow-pull-request.yml  workflow-push-main.yml  workflow-push-tags.yml
belt/: __init__.py  apps.py  commands.py  decorators.py  files.py  generators.py  managers.py  models.py  widgets.py
belt/contrib/rest_framework/: exceptions.py  pagination.py
belt/django_filters/: filters.py
belt/rest_framework/: mixins.py  serializers.py
belt/static/foreign_key_widget/: .gitignore  gulpfile.babel.js  package.json
belt/static/foreign_key_widget/src/: foreign_key_widget.js
belt/static/src/: foreign_key_widget.js
docs/: conf.py  index.rst
tests/: factories.py  settings.py  test_api.py  test_files.py  test_models.py
tests/app/: constants.py  filters.py  managers.py  models.py  resources.py  router.py  urls.py
