[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
dist-name = "django-belt"
module = "belt"
author = "Marcos Gabarda"
author-email = "hey@marcosgabarda.com"
home-page = "https://github.com/marcosgabarda/django-belt"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
requires = [
    "django", "django-model-utils", "djangorestframework", "django-filter"
 ]
description-file = "README.rst"
requires-python=">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory_boy",
]
doc = ["belt"]

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True
envlist = py36,py37

[testenv]
deps =
    django
    django-model-utils
    pytest
    pytest-django
    pytest-cov
    factory_boy
commands = pytest
"""
